# lidar-apriltag-detection

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.yaml
examples/: CMakeLists.txt  create_markers.cpp  helpers.hpp  main.cpp  single_range_image_detection.cpp  tag_detection.cpp
lidar_aruco_detection/: CMakeLists.txt
lidar_aruco_detection/cmake/: lidar_aruco_detection-config.cmake.in
lidar_aruco_detection/include/lidar_aruco_detection/: euclidean_clustering.hpp  image_marker_detection.hpp  image_projection.hpp  intensity_gradient_filtering.hpp  lidar_aruco_detection.hpp  oriented_bounding_box.hpp  pointcloud.hpp  visualisation.hpp
lidar_aruco_detection/src/: euclidean_clustering.cpp  image_marker_detection.cpp  image_projection.cpp  intensity_gradient_filtering.cpp  lidar_aruco_detection.cpp  oriented_bounding_box.cpp  visualisation.cpp
src/: aruco_detector.cpp  aruco_detector.h  configuration.cpp  configuration.hpp  euclidean_clustering.cpp  euclidean_clustering.hpp  feature_extraction.cpp  feature_extraction.hpp  image_marker_detection.cpp  image_projection.cpp  image_projection.hpp  intensity_gradient_filtering.cpp  intensity_gradient_filtering.hpp  main.cpp  main_create_markers.cpp  marker_detection.cpp  marker_detection.hpp  oriented_bounding_box.cpp  oriented_bounding_box.hpp  pointcloud.hpp  range_image_visualisation_example.cpp  utils.cpp  utils.h  visualisation.cpp  visualisation.hpp
src/original/: configuration.cpp  feature_extraction.cpp  feature_extraction.hpp  main.cpp
